--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
 
         <div class="home-sci">
-          <a href=""><i class='bx bxl-instagram'></i></a>
-          <a href=""><i class='bx bxl-github'></i></a>
-          <a href=""><i class='bx bxl-linkedin' ></i></a>
+          <a href="https://www.instagram.com/sk00.980"><i class='bx bxl-instagram'></i></a>
+          <a href="https://github.com/Shaikh-Irfan"><i class='bx bxl-github'></i></a>
+          <a href="https://www.linkedin.com/in/shaikh-irfan"><i class='bx bxl-linkedin' ></i></a>
         </div>
       </div>
     </section>
